# Zeytin

./: README.md  pyproject.toml
zytn/: db.sqlite3  manage.py
zytn/assistant/: models.py  tests.py  views.py
zytn/assistant/migrations/: 0001_initial.py
zytn/assistant/pipeline/: RAG.py  chain.py  ingest.ipynb  prompts.py
zytn/templates/: chatbot.html
zytn/zytn/: asgi.py  settings.py  urls.py  wsgi.py
